# png2tile

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  image.h  main.cpp  palette.cpp  palette.h  tile.cpp  tile.h  version.h
.github/workflows/: cmake-multi-platform.yml
compressors/: gfxcomp_phantasystargaiden.cpp  gfxcomp_stm.c
